# hyundai-kia-developers-ha

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
custom_components/hyundai_kia_developers/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  manifest.json  models.py  sensor.py  strings.json  util.py
custom_components/hyundai_kia_developers/translations/: en.json  ko.json
docs/: developer-setup.en.md  developer-setup.ko.md  developer-setup.md  pyscript-migration.ko.md  pyscript-migration.md
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_entities.py  test_util.py
